fix: adjust code line break on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -230,6 +230,8 @@ a.back-btn {
     background-color: rgba($color: #ffffff, $alpha: 0.15);
     padding: 2px 4px;
     border-radius: 4px;
+    word-break: break-word;
+    overflow-wrap: anywhere;
   }
 
   .image {
